fix: header conditional buttons, extra padding in UseYourProfile comp removal, container fix

--- a/src/components/landing-page/HowItWorks/TraitTemplate/TraitTemplate.module.scss
+++ b/src/components/landing-page/HowItWorks/TraitTemplate/TraitTemplate.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  height: 208px;
+  min-height: 208px;
   padding-left: 20px;
   padding-right: 40px;
   padding-bottom: 20px;
