--- a/src/components/landing-page/LandingHeader/LandingHeader.module.scss
+++ b/src/components/landing-page/LandingHeader/LandingHeader.module.scss
@@ -14,12 +14,6 @@
   justify-content: space-between;
   align-items: center;
   height: 100%;
-  @include mobile {
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    gap: 30px;
-  }
 }
 
 .frameButtons {
@@ -27,19 +21,6 @@
   align-items: center;
   justify-content: center;
   gap: $spacing-3;
-
-  @include mobile {
-    display: none;
-    /*     position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: auto;
-    justify-content: center;
-    padding: $spacing-4 12%;
-    background: black;
-    z-index: 10; */
-  }
 }
 
 .buttonBox {
@@ -49,4 +30,37 @@
   align-items: center;
   gap: 12px;
   max-width: 420px;
+  @include mobile {
+    display: none;
+  }
+}
+
+.buttonBoxMobile {
+  display: none;
+  @include mobile {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+    max-width: 420px;
+  }
+}
+
+.mobileButton {
+  display: flex;
+  gap: $spacing-2;
+  @include mobile {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+    justify-content: center;
+    padding: $spacing-4 12%;
+    background-color: #04080d;
+    button {
+      width: auto;
+    }
+  }
 }
